--- a/resume.tex
+++ b/resume.tex
@@ -12,9 +12,7 @@
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%% RESUME 5/25/2019 BRIAN %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Configuration
@@ -96,7 +94,7 @@
 	%{Sacramento, CA}
 	%{2015 - 2016}
 	%{}
-
+    \vspace{3mm}
 	\cventry
 	{Store associate}
 	{Ink n Toner Solutions}
