--- a/resume.tex
+++ b/resume.tex
@@ -135,7 +135,7 @@
 	%\vspace{-5mm}
 	
 	\cventry
-	{A classic game Asteroids remade in Java for Object-Oriented Computer Graphics Programming class}
+	{A classic game Asteroids remade in Java for Object-Oriented Computer Graphics Programming class, utilizing Model-Viewer-Controller framework}
 	{Asteroids}
 	{Java}
 	{}
